css/footer.css
footer {
  background-color: #f7f8fa;
  padding-top: 56px;
  padding-bottom: 64px;
}

.footerContent {
  margin: 0 16px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.copyRightAndSubscribeWrapper,
.addressWrapper {
  width: 288px;
}

.copyRightWrapper {
  margin-bottom: 24px;
}

.footerLogoWrapper {
  width: 86px;
  height: 31px;
}

.footerLogoWrapper img {
  width: 100%;
  height: 100%;
}

.copyRightWrapper p {
  font-size: 12px;
  line-height: 2;
  color: #4e7e80;
  margin-top: 16px;
}

.subscribeWrapper {
  border-radius: 24px;
  background-color: #e6eded;
  padding: 32px 16px 24px; 
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.subscribeWrapper h4 {
  font-size: 18px;
  font-weight: bold;
  line-height: 1.33;
  color: #1e595c;
  margin-bottom: 15px;
}

.subscribe label {
  font-size: 14px;
  line-height: 1.07;
  color: #313233;
  margin-bottom: 8px;
}

.subscribe input {
  margin-top: 8px;
  width: 256px;
  height: 40px;
  border-radius: 5px;
  border: solid 1px #dcdee0;
  background-color: #ffffff;
  outline: none;
  padding: 0 16px
}

.subscribe input:focus {
  border-color: rgb(41, 126, 255);
}

.subscribeButton {
  padding: 16px 24px; 
  border-radius: 24px;
  background-image: linear-gradient(to bottom, #507e80, #376b6e);
  font-size: 14px;
  font-weight: 500;
  line-height: 1.14;
  text-align: center;
  color: #ffffff;
  margin-top: 17px;
}

.subscribeButton:disabled {
  opacity: 0.5;
}


.subscriptionFeedback {
  display: none;
}

.subscriptionFeedback.success {
  color: green;
  display: block;
}

.subscriptionFeedback.error {
  color: red;
  display: block;
}

.organizationDetailsWrapper {
  margin-top: 40px;
  align-self: baseline;
}

.organizationDetailsWrapper h5 {
  margin-bottom: 8px;
  font-size: 12px;
  font-weight: 500;
  line-height: 2;
  color: #313233;
}

.organizationDetailsWrapper p {
  width: 257px;
  font-size: 14px;
  line-height: 1.71;
  color: #4e5052;
  margin-bottom: 40px;
}

.paymentDetailsWrapper {
  align-self: baseline;
}

.paymentDetailsWrapper h6 {
  font-size: 12px;
  font-weight: 500;
  line-height: 2;
  color: #313233;
  margin-bottom: 8px;
}

.paymentsWrapper {
  font-size: 14px;
  line-height: 1.71;
  color: #4e5052;
}

.bankDetails {
  font-size: 14px;
  line-height: 1.71;
  color: #4e5052;
  margin-top: 24px;
}

@media screen and (min-width: 640px) {
  .footerContent {
    margin: 0 24px;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
  }
  .copyRightAndSubscribeWrapper {
    margin-right: 30px;
  }
  .addressWrapper {
    margin-left: 30px;
  }
  .organizationDetailsWrapper {
    margin-top: 0;
  }
}

@media screen and (min-width: 768px) {
  .copyRightAndSubscribeWrapper {
    width: 384px;
  }
  .subscribe input {
    width: 320px;
  }
}

@media screen and (min-width: 1024px) {
  .copyRightAndSubscribeWrapper {
    margin-right: 75px;
  }
  .subscribe input {
    width: 320px;
  }
  .addressWrapper {
    margin-left: 75px;
  }
}

@media screen and (min-width: 1440px) {
  .copyRightAndSubscribeWrapper {
    width: 447px;
  }
  .subscribe input {
    width: 383px;
  }
  .addressWrapper {
    display: flex;
    width: 550px;
    justify-content: center;
    margin-left: 50px;
  }
  .organizationDetailsWrapper {
    margin-right: 50px;
  }
  .paymentDetailsWrapper {
    margin-left: 50px;
  }
}

